css: Fix group project icon alignment

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7010,6 +7010,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     font-size: 15px;
     color: rgba(0, 0, 0, 0.7);
     padding: 0 2px;
+    vertical-align: top;
 }
 
 .no-margin {
